grammar.txt
<prog>
1.  <prog> -> KEY_SCOPE END_OF_LINE <scope-st-list> 
2.  <prog> -> KEY_DECLARE KEY_FUNCTION IDENTIFIER OPENING_BRACKET <param-list> KEY_AS <data-type> END_OF_LINE <prog>
4.  <prog> -> KEY_FUNCTION IDENTIFIER OPENING_BRACKET <param-list> KEY_AS <data-type> END_OF_LINE <fun-st-list> 
5.  <prog> -> END_OF_LINE <prog>

<end-prog>
7.  <end-prog> -> END_OF_LINE <end-prog>
8.  <end-prog> -> END_OF_FILE

<param-list>
9.  <param-list> -> CLOSING_BRACKET
10. <param-list> -> IDENTIFIER KEY_AS <data-type> <param>   

<param>
11. <param> -> CLOSING_BRACKET
11. <param> -> COMMA IDENTIFIER KEY_AS <data-type> <param>

<fun-st-list>
12. <fun-st-list> -> <fun-stat> <fun-st-list>
14. <fun-st-list> -> KEY_END KEY_FUNCTION END_OF_LINE <prog>
    <fun-st-list> -> KEY_DIM IDENTIFIER KEY_AS <data-type> <assign> <fun-st-list>

<fun-if-stat-list>
    <fun-if-stat-list> -> <fun-stat> <fun-if-stat-list>
    <fun-if-stat-list> -> KEY_ELSE END_OF_LINE

<fun-else-stat-list>
    <fun-if-stat-list> -> <fun-stat> <fun-else-stat-list>
    <fun-if-stat-list> -> KEY_END KEY_IF

<fun-while-stat-list>
    <fun-while-stat-list> -> <fun-stat> <fun-while-stat-list>
    <fun-while-stat-list> -> KEY_LOOP

<fun-stat>
15. <fun-stat> -> END_OF_LINE
17. <fun-stat> -> IDENTIFIER OPERATOR_ASSIGN <expression> END_OF_LINE
18. <fun-stat> -> KEY_INPUT IDENTIFIER END_OF_LINE
19. <fun-stat> -> KEY_PRINT <print-list> 
20. <fun-stat> -> KEY_IF <expression> KEY_THEN END_OF_LINE <fun-if-stat-list> <fun-else-stat-list> END_OF_LINE
21. <fun-stat> -> KEY_DO KEY_WHILE <expression> END_OF_LINE <fun-while-stat-list> END_OF_LINE
23. <fun-stat> -> IDENTIFIER OPERATOR_ASSIGN IDENTIFIER OPENING_BRACKET <param-id-list> END_OF_LINE //mee too
24. <fun-stat> -> KEY_RETURN <expression> END_OF_LINE

<scope-st-list>
25. <scope-st-list> -> <scope-stat> <scope-st-list>
28. <scope-st-list> -> KEY_END KEY_SCOPE <end-prog>
29. <scope-st-list> -> KEY_DIM IDENTIFIER KEY_AS <data-type> <assign> <scope-st-list>

<scope-if-stat-list>
    <scope-if-stat-list> -> <scope-stat> <scope-if-stat-list>
    <scope-if-stat-list> -> KEY_ELSE END_OF_LINE

<scope-else-stat-list>
    <scope-if-stat-list> -> <scope-stat> <scope-else-stat-list>
    <scope-if-stat-list> -> KEY_END KEY_IF

<scope-while-stat-list>
    <scope-while-stat-list> -> <scope-stat> <scope-while-stat-list>
    <scope-while-stat-list> -> KEY_LOOP

<assign>
    <assign> -> OPERATOR_ASSIGN <expression> END_OF_LINE
    <assign> -> END_OF_LINE

<scope-stat>
29. <scope-stat> -> END_OF_LINE
32. <scope-stat> -> KEY_INPUT IDENTIFIER END_OF_LINE
33. <scope-stat> -> KEY_PRINT <print-list>
34. <scope-stat> -> KEY_IF <expression> KEY_THEN END_OF_LINE <scope-if-stat-list> <scope-else-stat-list> END_OF_LINE 
35. <scope-stat> -> KEY_DO KEY_WHILE <expression> END_OF_LINE <scope-while-stat-list> END_OF_LINE
31. <scope-stat> -> IDENTIFIER OPERATOR_ASSIGN <expression> END_OF_LINE
37. <scope-stat> -> IDENTIFIER OPERATOR_ASSIGN IDENTIFIER OPENING_BRACKET <param-id-list> END_OF_LINE       // and me 

<param-id-list>
39. <param-id-list> -> CLOSING_BRACKET
39. <param-id-list> -> IDENTIFIER <param-id>               

<param-id>
11. <param> -> CLOSING_BRACKET
11. <param> -> COMMA IDENTIFIER <param-id>

<print-list>
40. <print-list> -> <expression> SEMICOLON <print>

<print>
    <print> -> END_OF_LINE
    <print> -> <expression> SEMICOLON <print>

<data-type>
42. <data-type> -> KEY_STRING
43. <data-type> -> KEY_DOUBLE
44. <data-type> -> KEY_INTEGER
 
<expression>      /// vyresit expressions

<<<<<<<<  nonterminals:  >>>>>>>>>>
    <assign>
    <data-type>
    <end-prog>

<expression> 

    <fun-else-stat-list>
    <fun-if-stat-list>
    <fun-st-list>
    <fun-stat>
    <fun-while-stat-list>
    <param-id-list>
    <param-id>
    <param-list>
    <param>
    <print-list>
    <print>
    <prog>
    <scope-else-stat-list>
    <scope-if-stat-list>
    <scope-st-list>
    <scope-stat>
    <scope-while-stat-list>
